2004/07/08 Matthew Zimmerman <zubov@users.sourceforge.net>
* Changes in JobManager to check for deleted files in the job queue
* Fixed small bug in ConstantMirroring
* Implemented GenericTextOutput irc plugin instead of Affils and Bnc
  checkout conf/generictextoutput.conf.dist

2004/07/07 Matthew Zimmerman <zubov@users.sourceforge.net>
* Integrated "site give" and "site take" with FtpConfig so give and take permissions
  can be defined in perms.conf
* Fixed the double announce error with the sitebot
* Refactored JobManager and SlaveTransfer's and added functionality that will result
  in better error control and output

2004/07/04 Matthew Zimmerman <zubov@users.sourceforge.net>
* Slightly refactored ArchiveType's
* site archive command now takes, Properties parameters
  try "site archive" for help
* Implemented ConstantMirroring which will keep X # of copies of files 
  at all times

2004/07/01 Matthew Zimmerman <zubov@users.sourceforge.net>
* Implemented SITE GRPREN <oldgroup> <newgroup>
* Heavily refactored UserManager(s), UserManager is now an abstract class
* Refactoring on User and AbstractUser also

2004/06/30 Morgan Christiansson <drftpd@mog.se>
* Now using AddAsciiOutputStream on controlconnection so that a single \n
  will never appear alone which is not what the FTP RFC says and breaks
  RaidenFTPD.

2004/06/29 Morgan Christiansson <drftpd@mog.se>
* Added ListUtils to "ant slavejar" target.

2004/6/28 Matthew Zimmerman <zubov@users.sourceforge.net>
* Fixed a minor bug in ArchiveType's where directories without files 
  could cause a NullPointerException, Thanks to akrog for the report
* Fixed rename(), it would leave old directories behind, thanks Cy8er
* Fixed gadmin's being able to give a leech slot when they are not allowed, thanks wikd

2004/06/27 Morgan Christiansson <drftpd@mog.se>
* Added org.drftpd.plugins.Exec per request of darcangel.
  See http://drftpd.org/modules.php?name=Forums&file=viewtopic&t=49